@@ -9,6 +9,9 @@ CHANGELOG
 - TestEngine: IM_CHECK_FLOAT_xx compare operators using epsilon now display input values
   in the log instead of the fabs(a-b) result.
 - TestEngine: added IM_CHECK_DOUBLE_EQ, IM_CHECK_DOUBLE_NE check macros.
+- TestEngine: *BREAKING* obsoleted IM_CHECK_FLOAT_NEAR / IM_CHECK_FLOAT_NEAR_NO_RET
+  check macros which were ambiguous. Kept inline redirection macros.
+    IM_CHECK_FLOAT_NEAR(A, B, 100.0f) --> IM_CHECK(fabs(a - b) <= 100.0f)
 
 2025/10/01:
 - TestEngine: fixed recovering from situation where TestFunc changed current context.
